Fix: set `overflow-y` to `auto` for `GasSation` transactions container

--- a/src/modules/dashboard/components/GasStation/GasStation.css
+++ b/src/modules/dashboard/components/GasStation/GasStation.css
@@ -28,7 +28,7 @@
   composes: contentSection;
   min-height: 70px;
   max-height: 456px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .walletHeading {
